# qb_finder

./: Cargo.toml  flake.nix
.github/workflows/: deploy.yml
py_qbf/: Cargo.toml
py_qbf/src/: lib.rs
qb_finder/: Cargo.toml
qb_finder/src/: main.rs  minimals.rs  qb_finder.rs  queue.rs  solver.rs
qb_finder_cli/: Cargo.toml
qb_finder_cli/src/: main.rs
qb_finder_core/: Cargo.toml
qb_finder_core/src/: lib.rs  minimals.rs  qb_finder.rs  queue.rs  solver.rs
qb_finder_web/: Cargo.toml  index.html  mino-board.js  setup_mins.html  style.css  worker.js
qb_finder_web/src/: lib.rs
