[package]
name = "py_qbf"
version = "0.1.0"
edition = "2024"

[lib]
name = "py_qbf"
crate-type = ["cdylib"]

[dependencies]
qb_finder_core = { path = "../qb_finder_core/" }
itertools = "0.14.0"
srs-4l = { workspace = true }
rustc-hash = "2.1.1"
pyo3 = { version = "0.28.0", features = ["extension-module"] }
